# gradescope-fake-assignment

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/gradescope_fake_assignment/: __main__.py
tests/resources/: bad-file-invalid.csv  test-roster-bad-columns.csv  test-roster.csv
