[project]
name = "gradescope-fake-assignment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jason Hemann", email = "jason.hemann@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "reportlab>=4.2.5",
    "pikepdf>=9.4.0",
    "pyinstaller>=6.11.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
