[project]
name = "gradescope-fake-assignment"
version = "0.1.0"
description = "Generate dummy Gradescope submissions from a class roster"
authors = [
    {name = "Jason Hemann", email = "jason.hemann@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "reportlab>=4.2.5",
    "pikepdf>=9.4.0",
    "pyinstaller>=6.11.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "C90", "SIM", "RET", "N", "Q", "RUF", "PT", "D"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D205",
    "D213",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "recommended"
reportMissingTypeStubs = "none"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]
